--- a/app/theme/backend/default/template/banner/addBanner.phtml
+++ b/app/theme/backend/default/template/banner/addBanner.phtml
@@ -2,221 +2,74 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <?php include './html/meta.phtml'; ?>
-<script type="text/javascript" >
+<script type="text/javascript">
 $(document).ready(function(){
-	field('image file');
+	field('image url');
+	//$("#context").parent().parent().css("display","none");
+	$("#uploadFile").parent().parent().css("display","none");
 })
-function field(field){
-	var fieldCss ='';
+
+	function field(field) {
 	switch(field){
-	case 'image url':
-		$("#linkField").css("display","");
-		$("#uploadField").css("display","none");
-		$("#objectField").css("display","none");
-		break;
 	case 'image file':
 	case 'swf file':
-		$("#uploadField").css("display","");
-		$("#linkField").css("display","none");
-		$("#objectField").css("display","none");
+		$("#uploadFile").parent().parent().css("display","");
+		$("#context").parent().parent().css("display", "none");
+		$("label[for=uploadFile]").html(field);
 		break;
+	case 'image url':
 	case 'swf object':
 	case 'javascript code':
-		$("#objectField").css("display","");
-		$("#uploadField").css("display","none");
-		$("#linkField").css("display","none");
+		$("#context").parent().parent().css("display", "");
+		$("#uploadFile").parent().parent().css("display","none");
+		$("label[for=context]").html(field);
 		break;
-	default:
-	$("#linkField").css("display","none");
-	$("#uploadField").css("display","none");
-	$("#objectField").css("display","none");
 	}
 }
+
 </script>
 </head>
-<body>
+<body class="tundra">
+
 <!--container-->
 <div class="container">
 <?php include './html/header.phtml'; ?>
 <?php include './html/menu.phtml'; ?>
 <?php include './html/notification.phtml'; ?>
+
 <!--content-->
 <div class="content"><!--maincont-->
 <div class="maincont cleaner"><!--lftnav-->
-<div class="lftnav">
-<h3 class="margb1"><?php echo $this->__ ( 'Banner_Add New Banner' ); ?></h3>
-<ul>
-	<li class="tab active" title="conttab1"><a href="javascript:void(0);"><span><?php echo $this->__ ( 'Banner_Information' ); ?></span></a></li>
-	<li class="tab" title="conttab2"><a href="javascript:void(0);"><span><?php echo $this->__ ( 'Banner_Advanced' ); ?></span></a></li>
-</ul>	
-</div>
-<!--end lftnav--> <!--ritcont-->
-<form method="post" action="" enctype="multipart/form-data">
-<div class="ritcont">
+<!--end lftnav-->
 
 <!--srch-rslt-->
 <div class="srch-rslt">
-	<!-- <h3 class="fl pagetitle margthaf"><?php echo $this->__ ( 'Banner_Add New Banner' ); ?></h3>-->
-	<a href="javascript:void(0);" class="save-btn"><em><button name="btn_submit" value="-1" class="emptbtn" type="submit"><?php echo $this->__ ( 'Banner_Save And Continue Edit' ); ?></button></em></a>
-	<a href="javascript:void(0);" class="save-btn"><em><button name="btn_submit" value="1" class="emptbtn" type="submit"><?php echo $this->__ ( 'Banner_Save' ); ?></button></em></a>
-	<a href="javascript:void(0);" class="save-btn"><em><button name="btn_submit" value="2" class="emptbtn" type="submit"><?php echo $this->__ ( 'Banner_Reset' ); ?></button></em></a>
-	<a href="javascript:void(0);" class="backbtn"><em><button name="btn_submit" value="3" class="emptbtn" type="submit"><?php echo $this->__ ( 'Banner_Back' ); ?></button></em></a>
+<h3 class="fl pagetitle margthaf"><?php echo $this->__ ( 'Banner_Add New Banner' ); ?></h3>
+<a href="javascript:void(0);" class="save-btn"><em><button name="btn_submit" value="2" class="emptbtn" type="submit"><?php echo $this->__ ( 'Banner_Save And Continue Edit' ); ?></button></em></a>
+<a href="javascript:void(0);" class="save-btn"><em><button name="btn_submit" value="1" class="emptbtn" type="submit"><?php echo $this->__ ( 'Banner_Save' ); ?></button></em></a>
+<a href="javascript:void(0);" class="save-btn"><em><button name="btn_submit" value="0" class="emptbtn" type="reset"><?php echo $this->__ ( 'Banner_Reset' ); ?></button></em></a>
+<a href="javascript:history.go(-1)" class="backbtn"><em><button name="btn_submit" value="-1" class="emptbtn" type="button" onlcick="javascript:history.go(-1);"><?php echo $this->__ ( 'Banner_Back' ); ?></button></em></a>
 </div>
 <!--end srch-rslt-->
-<!--conttab1-->
-<div class="mytabscont" id="conttab1" style="display: block"><!--entrdata-->
-<div class="entrdata">
-<h2 class="datatitle"><?php echo $this->__ ( 'Banner_Information' ); ?></h2>
-<div class="entrdcont">
-<div class="wdthauto">
-		<input type="hidden" id="Id" name="Id" value="<?php print $this->sanitized->Id->value; ?>" /> 
-		<input type="hidden" id="token" name="token" value="<?php print $this->sanitized->token->value; ?>" />
-<table class="formlist">
-	<tr>
-		<td class="lable jstalgntop"><?php echo $this->__ ( 'Banner_Title' ); ?>:</td>
-		<td class="lablvalue jstalgntop"><input type="text" class="inptflx"
-			name="title" id="title"
-			value="<?php echo $this->sanitized->title->value; ?>" />
-		<div class="validat" style="<?php print $this->sanitized->title->errorMessageStyle; ?>"><?php print $this->sanitized->title->errorMessage; ?></div>
-		</td>
-	</tr>
-	<tr>
-		<td class="lable jstalgntop"><?php echo $this->__ ( 'Banner_Label' ); ?>:</td>
-		<td class="lablvalue jstalgntop"><input type="text" class="inptflx"
-			id="label" name="label"
-			value="<?php print $this->sanitized->label->value; ?>" />
-		<div class="validat" style="<?php print $this->sanitized->label->errorMessageStyle; ?>">
-		<?php print $this->sanitized->label->errorMessage; ?></div>
-		</td>
-	</tr>
-	<tr>
-		<td class="lable jstalgntop"><?php echo $this->__ ( 'Banner_Area' ); ?>:</td>
-		<td class="lablvalue jstalgntop"><select class="inptslct" id="area"	name="area">
-		<?php echo $this->areaList; ?>
-		</select>
-		<div class="validat" style="<?php print $this->sanitized->area->errorMessageStyle; ?>">
-		<?php print $this->sanitized->area->errorMessage; ?></div>
-		</td>
-	</tr>
-	<tr>
-		<td class="lable jstalgntop"><?php echo $this->__ ( 'Banner_Type' ); ?>:</td>
-		<td class="lablvalue jstalgntop"><select class="inptslct" id="type"	name="type" onchange="field(this.value);">
-		<?php echo $this->typeList; ?>
-		</select>
-		<div class="validat" style="<?php print $this->sanitized->type->errorMessageStyle; ?>">
-		<?php print $this->sanitized->type->errorMessage; ?></div>
-		</td>
-	</tr>
-	<tr id="uploadField" style="display: none;">
-		<td class="lable jstalgntop"><?php echo $this->__ ( 'Object_Upload' ); ?>:</td>
-		<td class="lablvalue jstalgntop"><input type="file" class="inptfile"
-			id="uploadFile" name="uploadFile" />
-		<div class="validat" style="<?php print $this->sanitized->uploadFile->errorMessageStyle; ?>">
-		<?php  print $this->sanitized->uploadFile->errorMessage; ?></div>
-		</td>
-	</tr>
-	<tr id="linkField" style="display: none;">
-		<td class="lable jstalgntop"><?php echo $this->__ ( 'Banner_Link' ); ?>:</td>
-		<td class="lablvalue jstalgntop"><input type="text" class="inptflx" id="link" name="link"
-			value="<?php print $this->sanitized->link->value; ?>" />
-		<div class="validat" style="<?php print $this->sanitized->link->errorMessageStyle; ?>">
-		<?php print $this->sanitized->link->errorMessage; ?></div>
-		</td>
-	</tr>
-	<tr id="objectField" style="display: none;">
-		<td class="lable jstalgntop"><?php echo $this->__ ( 'Banner_Object' ); ?>:</td>
-		<td class="lablvalue jstalgntop"><textarea class="txtarea"  id="object" name="object"><?php print $this->sanitized->object->value; ?></textarea>
-		<div class="validat" style="<?php print $this->sanitized->object->errorMessageStyle; ?>">
-		<?php print $this->sanitized->object->errorMessage; ?></div>
-		</td>
-	</tr>
-	<tr>
-		<td class="lable jstalgntop">&nbsp;</td>
-		<td class="lablvalue jstalgntop">
-		<ul class="lstsopt">
-			<li class="cleaner"><input type="checkbox" class="intchk fl"
-				id="published" name="published" value="Yes"
-				<?php echo ('Yes' == $this->sanitized->published->value) ? 'checked="checked"' : ''; ?> /> <label for="published" class="inptlabl fl"><?php echo $this->__ ( 'Banner_Published' ); ?></label>
-			<div class="validat" style="<?php print $this->sanitized->published->errorMessageStyle; ?>">
-		<?php print $this->sanitized->published->errorMessage; ?></div>
-			</li>
-			<li class="cleaner"><input type="checkbox" id="approved"
-				class="intchk fl" name="approved" value="Yes"
-				<?php echo ('Yes' == $this->sanitized->approved->value) ? 'checked="checked"' : ''; ?> /> <label for="approved" class="inptlabl fl"><?php echo $this->__ ( 'Banner_Approved' ); ?></label>
-			<div class="validat" style="<?php print $this->sanitized->approved->errorMessageStyle; ?>">
-		<?php print $this->sanitized->approved->errorMessage; ?></div>
-			</li>
-		</ul>
-		</td>
-	</tr>
-</table>
-</div>
-</div>
-</div>
-<!--end entrdata--></div>
-<!--end conttab1-->
 
-<!--conttab2-->
-<div class="mytabscont" id="conttab2" style="display: none">
 <div class="entrdata">
-<h2 class="datatitle"><?php echo $this->__ ( 'Banner_Advanced Settings' ); ?></h2>
-<div class="entrdcont">
-<div class="wdthauto">
-<table class="formlist">
-	<tr>
-		<td class="lable jstalgntop"><?php echo $this->__ ( 'Banner_Comments' ); ?>:</td>
-		<td class="lablvalue jstalgntop"><input type="text" class="inptflx"
-			id="comment" name="comment"
-			value="<?php print $this->sanitized->comment->value; ?>" />
-		<div class="validat" style="<?php print $this->sanitized->comment->errorMessageStyle; ?>">
-		<?php print $this->sanitized->comment->errorMessage; ?></div>
-		</td>
-	</tr>
-	<tr>
-		<td class="lable jstalgntop"><?php echo $this->__ ( 'Banner_Options' ); ?>:</td>
-		<td class="lablvalue jstalgntop"><input type="text" class="inptflx"
-			id="option" name="option"
-			value="<?php print $this->sanitized->option->value; ?>" />
-		<div class="validat" style="<?php print $this->sanitized->option->errorMessageStyle; ?>">
-		<?php print $this->sanitized->option->errorMessage; ?></div>
-		</td>
-	</tr>
-	<tr>
-		<td class="lable jstalgntop"><?php echo $this->__ ( 'Banner_Publish From' ); ?>:</td>
-		<td class="lablvalue jstalgntop">
-		<div class="calen_beside"><input type="text"
-			class="inpttxt wdth70 slctdate" id="slct_date2" name="publishFrom"
-			value="<?php print $this->sanitized->publishFrom->value; ?>" /></div>
-		<div class="validat" style="<?php print $this->sanitized->publishFrom->errorMessageStyle; ?>">
-		<?php print $this->sanitized->publishFrom->errorMessage; ?></div>
-		</td>
-	</tr>
-	<tr>
-		<td class="lable jstalgntop"><?php echo $this->__ ( 'Banner_Publish To' ); ?>:</td>
-		<td class="lablvalue jstalgntop">
-		<div class="calen_beside"><input type="text"
-			class="inpttxt wdth70 slctdate" id="slct_date3" name="publishTo"
-			value="<?php print $this->sanitized->publishTo->value; ?>" /></div>
-		<div class="validat" style="<?php print $this->sanitized->publishTo->errorMessageStyle; ?>">
-		<?php print $this->sanitized->publishTo->errorMessage; ?></div>
-		</td>
-	</tr>
-</table>
+	<div class="entrdcont">
+		<div class="wdthauto">
+			<?php 
+			 echo $this->form;
+			 echo $this->dojo ();
+			?>
+		</div>
+	</div>
 </div>
-</div>
-</div>
-<!--end entrdata--></div>
-<!--end conttab2-->
-<!--end ritcont--></div>
-</form>
+
+
 </div>
 <!--end maincont-->
-
 </div>
 <!--end content-->
 
 <?php include './html/footer.phtml'; ?>
-
 </div>
 <!--end container-->
 </body>
