upload all modifications

--- a/app/theme/backend/default/template/html/en-menu.phtml
+++ b/app/theme/backend/default/template/html/en-menu.phtml
@@ -46,6 +46,100 @@
 		<li class="last"><a href="/admin/handle/pkg/object-source/action/list">List Sources</a></li>
 	</ul>
 	</li>
+	<li><a href="#">Landlots</a>
+		<ul>
+			<li><a href="#">Add Landlot</a></li>
+			<li><a href="#">List Landlot</a></li>
+			<li class="last"><a href="#" class="hassub">عرض القوائم الفرعية</a>
+				<ul>
+					<li><a href="/admin/handle/pkg/landlots-ancillary-buildings/action/list">المباني الملحقة</a></li>
+					<li><a href="/admin/handle/pkg/landlots-livenear1/action/list">Live near 1</a></li>
+					<li><a href="/admin/handle/pkg/landlots-livenear2/action/list">Live near 2</a></li>
+					<li><a href="/admin/handle/pkg/landlots-livenear3/action/list">Live near 3</a></li>
+					<li><a href="/admin/handle/pkg/landlots-livenear4/action/list">Live near 4</a></li>
+					<li><a href="/admin/handle/pkg/landlots-for/action/list">For</a></li>
+					<li><a href="/admin/handle/pkg/landlots-provence/action/list">provence</a></li>
+					<li><a href="/admin/handle/pkg/landlots-location/action/list">الموقع</a></li>
+					<li class="last"><a href="/admin/handle/pkg/landlots-type/action/list">النوع</a></li>
+				</ul>
+			</li>
+			<li class="last"><a href="#" class="hassub">إضافة إلى القوائم الفرعية</a>
+				<ul>
+					<li><a href="/admin/handle/pkg/landlots-ancillary-buildings/action/add">المباني الملحقة</a></li>
+					<li><a href="/admin/handle/pkg/landlots-livenear1/action/add">Live near 1</a></li>
+					<li><a href="/admin/handle/pkg/landlots-livenear2/action/add">Live near 2</a></li>
+					<li><a href="/admin/handle/pkg/landlots-livenear3/action/add">Live near 3</a></li>
+					<li><a href="/admin/handle/pkg/landlots-livenear4/action/add">Live near 4</a></li>
+					<li><a href="/admin/handle/pkg/landlots-for/action/add">For</a></li>
+					<li><a href="/admin/handle/pkg/landlots-provence/action/add">provence</a></li>
+					<li><a href="/admin/handle/pkg/landlots-location/action/add">الموقع</a></li>
+					<li class="last"><a href="/admin/handle/pkg/landlots-type/action/add">النوع</a></li>
+				</ul>
+			</li>
+		</ul>
+	</li>
+	<li><a href="#">العقارات</a>
+		<ul>
+			<li><a href="#">إضافة عقار</a></li>
+			<li><a href="#">عرض العقارات</a></li>
+			<li class="last"><a href="#" class="hassub">عرض القوائم الفرعية</a>
+				<ul>
+					<li><a href="/admin/handle/pkg/estate-air-condition/action/list">التدفئة المركزية</a></li>
+					<li><a href="/admin/handle/pkg/estate-livenear1/action/list">Live near 1</a></li>
+					<li><a href="/admin/handle/pkg/estate-livenear2/action/list">Live near 2</a></li>
+					<li><a href="/admin/handle/pkg/estate-livenear3/action/list">Live near 3</a></li>
+					<li><a href="/admin/handle/pkg/estate-livenear4/action/list">Live near 4</a></li>
+					<li><a href="/admin/handle/pkg/estate-outdoor-amenities/action/list">Outdoor amenities</a></li>
+					<li><a href="/admin/handle/pkg/estate-provence/action/list">provence</a></li>
+					<li><a href="/admin/handle/pkg/estate-location/action/list">الموقع</a></li>
+					<li class="last"><a href="/admin/handle/pkg/estate-type/action/list">النوع</a></li>
+				</ul>
+			</li>
+			<li class="last"><a href="#" class="hassub">إضافة إلى القوائم الفرعية</a>
+				<ul>
+					<li><a href="/admin/handle/pkg/estate-air-condition/action/add">التدفئة المركزية</a></li>
+					<li><a href="/admin/handle/pkg/estate-livenear1/action/add">Live near 1</a></li>
+					<li><a href="/admin/handle/pkg/estate-livenear2/action/add">Live near 2</a></li>
+					<li><a href="/admin/handle/pkg/estate-livenear3/action/add">Live near 3</a></li>
+					<li><a href="/admin/handle/pkg/estate-livenear4/action/add">Live near 4</a></li>
+					<li><a href="/admin/handle/pkg/estate-outdoor-amenities/action/add">Outdoor amenities</a></li>
+					<li><a href="/admin/handle/pkg/estate-provence/action/add">provence</a></li>
+					<li><a href="/admin/handle/pkg/estate-location/action/add">الموقع</a></li>
+					<li class="last"><a href="/admin/handle/pkg/estate-type/action/add">النوع</a></li>
+				</ul>
+			</li>
+		</ul>
+	</li>
+	<li><a href="#">المركبات</a>
+		<ul>
+			<li><a href="#">إضافة مركبة</a></li>
+			<li><a href="#">عرض المركبات</a></li>
+			<li class="last"><a href="#" class="hassub">عرض القوائم الفرعية</a>
+				<ul>
+					<li><a href="/admin/handle/pkg/vehicle-body-color/action/list">الألوان الخارجية</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-inside-color/action/list">الألوان الداخلية</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-insurance-type/action/list">نوع التأمين</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-make/action/list">المصنع</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-model/action/list">الموديل</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-type/action/list">النوع</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-year/action/list">السنة</a></li>
+					<li class="last"><a href="/admin/handle/pkg/vehicle-drag-system/action/list">ناقل الحركة</a></li>
+				</ul>
+			</li>
+			<li class="last"><a href="#" class="hassub">إضافة إلى القوائم الفرعية</a>
+				<ul>
+					<li><a href="/admin/handle/pkg/vehicle-body-color/action/add">الألوان الخارجية</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-inside-color/action/add">الألوان الداخلية</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-insurance-type/action/add">نوع التأمين</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-make/action/add">المصنع</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-model/action/add">الموديل</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-type/action/add">النوع</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-year/action/add">السنة</a></li>
+					<li class="last"><a href="/admin/handle/pkg/vehicle-drag-system/action/add">ناقل الحركة</a></li>
+				</ul>
+			</li>
+		</ul>
+	</li>
 	<li><a href="/admin/handle/pkg/tag/action/add">Tag</a>
 	<ul>
 		<li><a href="/admin/handle/pkg/tag/action/add">Add Tag</a></li>
