--- a/app/theme/backend/default/template/html/menu.phtml
+++ b/app/theme/backend/default/template/html/menu.phtml
@@ -12,7 +12,7 @@
 <div class="mainnav">
 <ul class="navlst cleaner">
 	<li><a href="/admin">الرئيسية</a>
-	<li><a href="/admin/handle/pkg/menu/action/add">إدارة القوائم</a>
+	<li><a href="/admin/handle/pkg/menu/action/add">القوائم</a>
 	<ul>
 		<li><a href="/admin/handle/pkg/menu/action/add">إضافة قائمة</a></li>
 		<li><a href="/admin/handle/pkg/menu/action/list">عرض القوائم</a></li>
@@ -20,7 +20,7 @@
 		<li class="last"><a href="/admin/handle/pkg/menu-type/action/list">عرض أنواع القوائم</a></li>
 	</ul>
 	</li>
-	<li><a href="/admin/handle/pkg/category/action/add">إدارة التصنيفات</a>
+	<li><a href="/admin/handle/pkg/category/action/add">التصنيفات</a>
 	<ul>
 		<li><a href="/admin/handle/pkg/category/action/add">إضافة تصنيف</a></li>
 		<li><a href="/admin/handle/pkg/category-type/action/add">إضافة نوع تصنيف جديد</a></li>
@@ -28,7 +28,7 @@
 		<li class="last"><a href="/admin/handle/pkg/category-type/action/list">قائمة أنواع التصنيفات</a></li>
 	</ul>
 	</li>
-	<li><a href="#">إدارة المواضيع</a>
+	<li><a href="#">المواضيع</a>
 	<ul>
 		<li><a class="hassub" href="#">إضافة موضوع جديد</a>
 		<ul>
@@ -64,7 +64,101 @@
 			<li class="last"><a href="/admin/handle/pkg/poll/action/list">عرض الاستطلاعات</a></li>
 		</ul>
 	</li>
-	<li><a href="/admin/handle/pkg/banner/action/add">إدارة الإعلانات</a>
+	<li><a href="#">الأراضي</a>
+		<ul>
+			<li><a href="#">إضافة أرض</a></li>
+			<li><a href="#">عرض الأراضي</a></li>
+			<li class="last"><a href="#" class="hassub">عرض القوائم الفرعية</a>
+				<ul>
+					<li><a href="/admin/handle/pkg/landlots-ancillary-buildings/action/list">المباني الملحقة</a></li>
+					<li><a href="/admin/handle/pkg/landlots-livenear1/action/list">Live near 1</a></li>
+					<li><a href="/admin/handle/pkg/landlots-livenear2/action/list">Live near 2</a></li>
+					<li><a href="/admin/handle/pkg/landlots-livenear3/action/list">Live near 3</a></li>
+					<li><a href="/admin/handle/pkg/landlots-livenear4/action/list">Live near 4</a></li>
+					<li><a href="/admin/handle/pkg/landlots-for/action/list">For</a></li>
+					<li><a href="/admin/handle/pkg/landlots-provence/action/list">provence</a></li>
+					<li><a href="/admin/handle/pkg/landlots-location/action/list">الموقع</a></li>
+					<li class="last"><a href="/admin/handle/pkg/landlots-type/action/list">النوع</a></li>
+				</ul>
+			</li>
+			<li class="last"><a href="#" class="hassub">إضافة إلى القوائم الفرعية</a>
+				<ul>
+					<li><a href="/admin/handle/pkg/landlots-ancillary-buildings/action/add">المباني الملحقة</a></li>
+					<li><a href="/admin/handle/pkg/landlots-livenear1/action/add">Live near 1</a></li>
+					<li><a href="/admin/handle/pkg/landlots-livenear2/action/add">Live near 2</a></li>
+					<li><a href="/admin/handle/pkg/landlots-livenear3/action/add">Live near 3</a></li>
+					<li><a href="/admin/handle/pkg/landlots-livenear4/action/add">Live near 4</a></li>
+					<li><a href="/admin/handle/pkg/landlots-for/action/add">For</a></li>
+					<li><a href="/admin/handle/pkg/landlots-provence/action/add">provence</a></li>
+					<li><a href="/admin/handle/pkg/landlots-location/action/add">الموقع</a></li>
+					<li class="last"><a href="/admin/handle/pkg/landlots-type/action/add">النوع</a></li>
+				</ul>
+			</li>
+		</ul>
+	</li>
+	<li><a href="#">العقارات</a>
+		<ul>
+			<li><a href="#">إضافة عقار</a></li>
+			<li><a href="#">عرض العقارات</a></li>
+			<li class="last"><a href="#" class="hassub">عرض القوائم الفرعية</a>
+				<ul>
+					<li><a href="/admin/handle/pkg/estate-air-condition/action/list">التدفئة المركزية</a></li>
+					<li><a href="/admin/handle/pkg/estate-livenear1/action/list">Live near 1</a></li>
+					<li><a href="/admin/handle/pkg/estate-livenear2/action/list">Live near 2</a></li>
+					<li><a href="/admin/handle/pkg/estate-livenear3/action/list">Live near 3</a></li>
+					<li><a href="/admin/handle/pkg/estate-livenear4/action/list">Live near 4</a></li>
+					<li><a href="/admin/handle/pkg/estate-outdoor-amenities/action/list">Outdoor amenities</a></li>
+					<li><a href="/admin/handle/pkg/estate-provence/action/list">provence</a></li>
+					<li><a href="/admin/handle/pkg/estate-location/action/list">الموقع</a></li>
+					<li class="last"><a href="/admin/handle/pkg/estate-type/action/list">النوع</a></li>
+				</ul>
+			</li>
+			<li class="last"><a href="#" class="hassub">إضافة إلى القوائم الفرعية</a>
+				<ul>
+					<li><a href="/admin/handle/pkg/estate-air-condition/action/add">التدفئة المركزية</a></li>
+					<li><a href="/admin/handle/pkg/estate-livenear1/action/add">Live near 1</a></li>
+					<li><a href="/admin/handle/pkg/estate-livenear2/action/add">Live near 2</a></li>
+					<li><a href="/admin/handle/pkg/estate-livenear3/action/add">Live near 3</a></li>
+					<li><a href="/admin/handle/pkg/estate-livenear4/action/add">Live near 4</a></li>
+					<li><a href="/admin/handle/pkg/estate-outdoor-amenities/action/add">Outdoor amenities</a></li>
+					<li><a href="/admin/handle/pkg/estate-provence/action/add">provence</a></li>
+					<li><a href="/admin/handle/pkg/estate-location/action/add">الموقع</a></li>
+					<li class="last"><a href="/admin/handle/pkg/estate-type/action/add">النوع</a></li>
+				</ul>
+			</li>
+		</ul>
+	</li>
+	<li><a href="#">المركبات</a>
+		<ul>
+			<li><a href="#">إضافة مركبة</a></li>
+			<li><a href="#">عرض المركبات</a></li>
+			<li class="last"><a href="#" class="hassub">عرض القوائم الفرعية</a>
+				<ul>
+					<li><a href="/admin/handle/pkg/vehicle-body-color/action/list">الألوان الخارجية</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-inside-color/action/list">الألوان الداخلية</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-insurance-type/action/list">نوع التأمين</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-make/action/list">المصنع</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-model/action/list">الموديل</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-type/action/list">النوع</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-year/action/list">السنة</a></li>
+					<li class="last"><a href="/admin/handle/pkg/vehicle-drag-system/action/list">ناقل الحركة</a></li>
+				</ul>
+			</li>
+			<li class="last"><a href="#" class="hassub">إضافة إلى القوائم الفرعية</a>
+				<ul>
+					<li><a href="/admin/handle/pkg/vehicle-body-color/action/add">الألوان الخارجية</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-inside-color/action/add">الألوان الداخلية</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-insurance-type/action/add">نوع التأمين</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-make/action/add">المصنع</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-model/action/add">الموديل</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-type/action/add">النوع</a></li>
+					<li><a href="/admin/handle/pkg/vehicle-year/action/add">السنة</a></li>
+					<li class="last"><a href="/admin/handle/pkg/vehicle-drag-system/action/add">ناقل الحركة</a></li>
+				</ul>
+			</li>
+		</ul>
+	</li>
+	<li><a href="/admin/handle/pkg/banner/action/add">الإعلانات</a>
 		<ul>
 			<li><a href="/admin/handle/pkg/banner/action/add">إضافة إعلان</a></li>
 			<li><a href="/admin/handle/pkg/banner/action/list">عرض الإعلانات</a></li>
@@ -72,13 +166,13 @@
 			<li class="last"><a href="/admin/handle/pkg/banner-area/action/list">عرض مناطق الإعلانات</a></li>
 		</ul>
 	</li>
-	<li><a href="/admin/handle/pkg/tag/action/add">إدارة السمات</a>
+	<li><a href="/admin/handle/pkg/tag/action/add">السمات</a>
 	<ul>
 		<li><a href="/admin/handle/pkg/tag/action/addBlackTag">إضافة سمة مشبوهة</a></li>
 		<li class="last"><a href="/admin/handle/pkg/tag/action/blackList">عرض السمات المشبوهة</a></li>
 	</ul>
 	</li>
-	<li><a href="/admin/handle/pkg/user/action/add">إدارة المستخدمين</a>
+	<li><a href="/admin/handle/pkg/user/action/add">المستخدمين</a>
 	<ul>
 		<li><a href="/admin/handle/pkg/user/action/add">إضافة مستخدم</a></li>
 		<li><a href="/admin/handle/pkg/user-level/action/add">إضافة نوع مستخدم</a></li>
@@ -94,15 +188,13 @@
 		<li><a href="/admin/handle/pkg/election/action/edit">بورصة المشرحين</a></li>
 		<li><a href="/admin/handle/pkg/classifieds/action/edit">إعلانات مبوبة</a></li>
 		<li><a href="/admin/handle/pkg/secrets/action/edit">خفايا وأسرار</a></li>
-		<li class="last"><a href="/admin/handle/pkg/live/action/edit">البث المباشر</a></li>
-		<!--
-		<li><a class="hassub" href="#">الترجمة</a>
+		<li><a href="/admin/handle/pkg/live/action/edit">البث المباشر</a></li>
+		<li><a class="href="#">الترجمة</a>
 		<ul>
 			<li><a href="/admin/handle/pkg/translation/action/add">إضافة كلمة</a></li>
 			<li class="last"><a href="/admin/handle/pkg/translation/action/list">عرض الكلمات المترجمة</a></li>
 		</ul>
 		</li>
-		-->
 	</ul>
 	</li>
 	<!-- <li class="visitors"><strong>عدد الزوار <span class="orng">(801)</span></strong></li>  -->
