--- a/app/theme/backend/default/template/locale/listLocale.phtml
+++ b/app/theme/backend/default/template/locale/listLocale.phtml
@@ -1,86 +1,124 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<?php include './html/meta.phtml'; ?>
-</head>
-<body>
-<!--container-->
-<div class="container">
-<?php include './html/header.phtml'; ?>
-<?php include './html/menu.phtml'; ?>
-<?php include './html/notification.phtml'; ?>
-<!--content-->
-<form method="get" action="" id="frm">
-<div>
-	<input type="hidden" id="token" name="token" value="<?php print $this->sanitized->title->value; ?>" />
-	<input type="hidden" id="actionURI" value="<?php print $this->sanitized->actionURI->value; ?>" />
-</div>
-<div class="content">
-<div class="srch-rslt cleaner">
-<h3 class="fl pagetitle margthaf"><?php echo $this->__ ( 'Locale_Locale' ); ?></h3>
-<a href="<?php print $this->sanitized->actionURI->value; ?>add" class="add-btn"><em><?php echo $this->__ ( 'Locale_Add New Locale' ); ?></em></a></div>
+	<head>
+		<?php
+		include './html/meta.phtml';
+		?>
+	</head>
+	<body>
+		<!--container-->
+		<div class="container">
+			<?php
+			include './html/header.phtml';
+			?>
+			<?php
+			include './html/menu.phtml';
+			?>
+			<?php
+			include './html/notification.phtml';
+			?>
+			<!--content-->
+			<form method="get" action="" id="frm">
+				<div>
+					<input type="hidden" id="token" name="token" value="<?php print $this -> sanitized -> locale -> value; ?>" />
+					<input type="hidden" id="actionURI" value="<?php print $this -> sanitized -> actionURI -> value; ?>" />
+				</div>
+				<div class="content">
+					<div class="srch-rslt cleaner">
+						<h3 class="fl page_title margthaf"><?php echo $this -> __('Locale'); ?></h3>
+						<a href="<?php print $this -> sanitized -> actionURI -> value; ?>add" class="add-btn"><em><?php echo $this -> __('Locale_Type Add New'); ?></em></a>
+					</div>
+					<!--filtration-->
+					<div class="filtration cleaner">
+						<!--go2page-->
+						<!--end go2page-->
+						<button type="button"
+						onclick="return changeFormAction('approve', 'post');" name="approve"
+						id="approve" class="inpt-btn fr">
+							<span><em><?php echo $this -> __('Locale_Approve');?></em></span>
+						</button>
+						<button type="button"
+						onclick="return changeFormAction('publish', 'post');" name="publish"
+						id="publish" value="Yes" class="inpt-btn fr">
+							<span><em><?php echo $this -> __('Locale_Publish');?></em></span>
+						</button>
+						<button type="button"
+						onclick="return changeFormAction('delete', 'post');" name="delete"
+						id="delete" class="inpt-btn fr">
+							<span><em><?php echo $this -> __('Locale_Type Delete'); ?></em></span>
+						</button>
+						<select style="float: left;" name="status">
+							<option <?php echo ($this->sanitized->status->value == 'Yes') ? 'selected="selected"' : '' ; ?> value="Yes"><?php echo $this -> __('Yes Option'); ?></option>
+							<option <?php echo ($this->sanitized->status->value == 'No') ? 'selected="selected"' : '' ; ?> value="No"><?php echo $this -> __('No Option'); ?></option>
+						</select>
+						<input type="hidden" id="redirectURI" name="redirectURI" value="<?php print $this -> sanitized -> redirectURI -> value; ?>" />
+					</div>
+					<?php
+					include './html/excel.phtml';
+					?>
+					<!--end filtration-->
+					<!--srch-rsult-->
+					<table class="srch-rsult">
+						<tr class="heading">
+							<th class="jstalgntop col1">
+							<input type="checkbox" name="selectAll" id="selectAll" />
+							</th>
+							<th class="jstalgntop col1"><a 
+							href="<?php echo $this -> sort -> locale -> href; ?>" 
+							class="<?php echo $this -> sort -> locale -> cssClass; ?>"> <span 
+							class="<?php echo $this -> sort -> locale -> cssClass; ?>"> <?php echo $this -> __('Locale_Locale'); ?></span> </a></th>
+							<th class="jstalgntop col1"><a
+							href="<?php echo $this -> sort -> title -> href; ?>"
+							class="<?php echo $this -> sort -> title -> cssClass; ?>"><span
+							class="<?php echo $this -> sort -> title -> cssClass; ?>"><?php echo $this -> __('Locale_Title'); ?></span></a></th>
+							<th class="jstalgntop col1"><a
+							href="<?php echo $this -> sort -> locale_title -> href; ?>"
+							class="<?php echo $this -> sort -> locale_title -> cssClass; ?>"><span
+							class="<?php echo $this -> sort -> locale_title -> cssClass; ?>"><?php echo $this -> __('Locale_Locale Title'); ?></span></a></th>
+							<th class="jstalgntop colyesno"><a
+							href="<?php echo $this -> sort -> published -> href;?>"
+							class="<?php echo $this -> sort -> published -> cssClass;?>"><span
+							class="<?php echo $this -> sort -> published -> cssClass;?>"><?php echo $this -> __('Locale_Publish');?></span></a></th>
+							<th class="jstalgntop colyesno"><a
+							href="<?php echo $this -> sort -> approved -> href;?>"
+							class="<?php echo $this -> sort -> approved -> cssClass;?>"><span
+							class="<?php echo $this -> sort -> approved -> cssClass;?>"><?php echo $this -> __('Locale_Aprrove');?></span></a></th>
+							<th class="jstalgntop col6"><a
+							href="<?php echo $this -> sort -> date_added -> href; ?>"
+							class="<?php echo $this -> sort -> date_added -> cssClass; ?>"><span
+							class="<?php echo $this -> sort -> date_added -> cssClass; ?>"><?php echo $this -> __('Locale_Date Added'); ?></span></a></th>
+							<th class="jstalgntop tools last"><span><?php echo $this -> __('Locale_Tools'); ?></span></th>
+						</tr>
+						<?php
+						if (!empty($this -> localeList) and false != $this -> localeList) {
+							foreach ($this->localeList as $key => $value) {
+								echo '<tr>';
+								echo '<td class="jstalgntop" style="text-align: center;"><input type="checkbox" name="localeId[' . $value['id'] . ']" id="check" value="Yes" /></td>';
+								echo '<td class="jstalgntop">' . $this -> cleanHtml($value['locale']) . '</td>';
+								echo '<td class="jstalgntop">' . $this -> cleanHtml($value['title']) . '</td>';
+								echo '<td class="jstalgntop">' . $this -> cleanHtml($value['locale_title']) . '</td>';
+								echo '<td class="jstalgntop">' . $this -> __($value['published']) . '</td>';
+								echo '<td class="jstalgntop">' . $this -> __($value['approved']) . '</td>';
+								echo '<td class="jstalgntop">' . $value['date_added'] . '</td>';
+								echo '<td class="jstalgntop last"><a href="/admin/handle/pkg/locale/action/edit/s/1/id/' . $value['id'] . '"
+class="modify fl" title="Edit"></a> <a href="javascript:void(0);"
+class="preview fl" title="Preview"></a></td>';
+								echo '</tr>';
+							}
+						}
+						?>
+					</table>
+					<!--end srch-rsult-->
+					<?php
+					include './html/paging.phtml';
+					?>
 
-
-<!--filtration-->
-<div class="filtration cleaner">
-	<button type="button" onclick="return changeFormAction('approve', 'post');" name="approve" id="approve"
-		class="inpt-btn fr"><span><em><?php echo $this->__ ( 'Locale_Approve' ); ?></em></span></button>
-	<button type="button" onclick="return changeFormAction('publish', 'post');" name="publish" id="publish"
-		class="inpt-btn fr"><span><em><?php echo $this->__ ( 'Locale_Publish' ); ?></em></span></button>
-	<button type="button" onclick="return changeFormAction('delete', 'post');" name="delete" id="delete"
-		class="inpt-btn fr"><span><em><?php echo $this->__ ( 'Locale_Delete' ); ?></em></span></button>
-	<select style="float: left;" name="status">
-	    <option <?php echo ($this->sanitized->status->value == 'Yes') ? 'selected="selected"' : '' ; ?> value="Yes"><?php echo $this->__('Yes Option'); ?></option>
-	    <option <?php echo ($this->sanitized->status->value == 'No') ? 'selected="selected"' : '' ; ?> value="No"><?php echo $this->__('No Option'); ?></option>
-	</select>
-	<input type="hidden" id="redirectURI" name="redirectURI" value="<?php print $this->sanitized->redirectURI->value; ?>" />
-</div>
-<!--end filtration-->
-
-<!--srch-rsult-->
-<table class="srch-rsult">
-	<tr class="heading">
-	<th class="jstalgntop col1"><input type="checkbox" name="selectAll" id="selectAll" /></th>
-		<th class="jstalgntop col1"><a
-			href="<?php echo $this->sort->title->href; ?>"
-			class="<?php echo $this->sort->title->cssClass; ?>"><span
-			class="<?php echo $this->sort->title->cssClass; ?>"><?php echo $this->__ ( 'Locale_Title' ); ?></span></a></th>
-		<th class="jstalgntop col2"><a
-			href="<?php echo $this->sort->localeTitle->href; ?>"
-			class="<?php echo $this->sort->localeTitle->cssClass; ?>"><span
-			class="<?php echo $this->sort->localeTitle->cssClass; ?>"><?php echo $this->__ ( 'Locale_Locale Title' ); ?></span></a></th>
-		<th class="jstalgntop colyesno"><a
-			href="<?php echo $this->sort->published->href; ?>"
-			class="<?php echo $this->sort->published->cssClass; ?>"><span
-			class="<?php echo $this->sort->published->cssClass; ?>"><?php echo $this->__ ( 'Locale_Publish' ); ?></span></a></th>
-		<th class="jstalgntop colyesno"><a
-			href="<?php echo $this->sort->approved->href; ?>"
-			class="<?php echo $this->sort->approved->cssClass; ?>"><span
-			class="<?php echo $this->sort->approved->cssClass; ?>"><?php echo $this->__ ( 'Locale_Aprrove' ); ?></span></a></th>
-		<th class="jstalgntop col6"><a
-			href="<?php echo $this->sort->dateAdded->href; ?>"
-			class="<?php echo $this->sort->dateAdded->cssClass; ?>"><span
-			class="<?php echo $this->sort->dateAdded->cssClass; ?>"><?php echo $this->__ ( 'Locale_Date Added' ); ?></span></a></th>
-		<th class="jstalgntop tools last"><span><?php echo $this->__ ( 'Locale_Tools' ); ?></span></th>
-	</tr>
-	
-	<?php 
-	if (!empty($this->localeList)) {
-		echo $this->localeList; 
-	}
-	?>
-
-</table>
-<!--end srch-rsult--> <!--begin paging-->
-<div class="paging"><a href="#er">&laquo;&nbsp;<?php echo $this->__ ( 'Locale_Previous' ); ?></a> <span class="current">1</span> <a href="#er">2</a> <a href="#er">3</a>
-<a href="#er">4</a> <a href="#er">5</a> <a href="#er">6</a> <a
-	href="#er">7</a> <a href="#er">8</a> <a href="#er">9</a> <a href="#er">10</a>
-<a href="#er"><?php echo $this->__ ( 'Locale_Next' ); ?>&nbsp;&raquo;</a></div>
-<!--end paging--></div>
-<!--end content-->
-</form>
-<?php include './html/footer.phtml'; ?>
-</div>
-<!--end container-->
-</body>
+					<!--end content-->
+			</form>
+			<?php
+			include './html/footer.phtml';
+			?>
+		</div>
+		<!--end container-->
+	</body>
 </html>
