--- a/app/theme/backend/default/template/locale/addLocale.phtml
+++ b/app/theme/backend/default/template/locale/addLocale.phtml
@@ -3,7 +3,7 @@
 <head>
 <?php include './html/meta.phtml'; ?>
 </head>
-<body>
+<body class="tundra">
 
 <!--container-->
 <div class="container">
@@ -14,22 +14,11 @@
 <!--content-->
 <div class="content"><!--maincont-->
 <div class="maincont cleaner"><!--lftnav-->
-<div class="lftnav">
-<h3 class="margb1"><?php echo $this->__ ( 'Locale_Locale' ); ?></h3>
-<ul>
-	<li class="tab active" title="conttab1"><a href="javascript:void(0);"><span><?php echo $this->__ ( 'Locale_Information' ); ?></span></a></li>
-	<li class="tab" title="conttab2"><a href="javascript:void(0);"><span><?php echo $this->__ ( 'Locale_Advanced' ); ?></span></a></li>
-</ul>
-</div>
 <!--end lftnav-->
-
-<!--ritcont-->
-<form action="" method="post">
-<div class="ritcont">
 
 <!--srch-rslt-->
 <div class="srch-rslt">
-<h3 class="fl pagetitle margthaf"><?php echo $this->__ ( 'Locale_Add New Locale' ); ?></h3>
+<h3 class="fl pagetitle margthaf"><?php echo $this->__ ( 'Locale_Default Add New' ); ?></h3>
 <a href="javascript:void(0);" class="save-btn"><em><button name="btn_submit" value="2" class="emptbtn" type="submit"><?php echo $this->__ ( 'Locale_Save And Continue Edit' ); ?></button></em></a>
 <a href="javascript:void(0);" class="save-btn"><em><button name="btn_submit" value="1" class="emptbtn" type="submit"><?php echo $this->__ ( 'Locale_Save' ); ?></button></em></a>
 <a href="javascript:void(0);" class="save-btn"><em><button name="btn_submit" value="0" class="emptbtn" type="reset"><?php echo $this->__ ( 'Locale_Reset' ); ?></button></em></a>
@@ -37,122 +26,19 @@
 </div>
 <!--end srch-rslt-->
 
-<!--conttab1-->
-<div class="mytabscont" id="conttab1" style="display: block"><!--entrdata-->
+<!--ritcont-->
 <div class="entrdata">
-<h2 class="datatitle"><?php echo $this->__ ( 'Locale_Information' ); ?></h2>
-<div class="entrdcont">
-<div class="wdthauto">
-	<input type="hidden" id="Id" name="Id" value="<?php print $this->sanitized->Id->value; ?>" /> 
-	<input type="hidden" id="token" name="token" value="<?php print $this->sanitized->token->value; ?>" />
-<table class="formlist">
-	<tr>
-		<td class="lable jstalgntop"><?php echo $this->__ ( 'Locale_Locale' ); ?>:</td>
-		<td class="lablvalue jstalgntop"><input type="text" class="inptflx"
-			name="locale" id="locale"
-			value="<?php echo $this->sanitized->locale->value; ?>" />
-		<div class="validat" style="<?php print $this->sanitized->locale->errorMessageStyle; ?>"><?php print $this->sanitized->locale->errorMessage; ?></div>
-		</td>
-	</tr>
-	<tr>
-		<td class="lable jstalgntop"><?php echo $this->__ ( 'Locale_Title' ); ?>:</td>
-		<td class="lablvalue jstalgntop"><input type="text" class="inptflx"
-			id="title" name="title"
-			value="<?php print $this->sanitized->title->value; ?>" />
-		<div class="validat" style="<?php print $this->sanitized->title->errorMessageStyle; ?>">
-		<?php print $this->sanitized->title->errorMessage; ?></div>
-		</td>
-	</tr>
-	<tr>
-		<td class="lable jstalgntop"><?php echo $this->__ ( 'Locale_Locale Title' ); ?>:</td>
-		<td class="lablvalue jstalgntop"><input type="text" class="inptflx"
-			name="localeTitle" id="localeTitle"
-			value="<?php echo $this->sanitized->localeTitle->value; ?>" />
-		<div class="validat" style="<?php print $this->sanitized->localeTitle->errorMessageStyle; ?>"><?php print $this->sanitized->localeTitle->errorMessage; ?></div>
-		</td>
-	</tr>
-	<tr>
-		<td class="lable jstalgntop">&nbsp;</td>
-		<td class="lablvalue jstalgntop">
-		<ul class="lstsopt">
-			<li class="cleaner"><input type="checkbox" class="intchk fl"
-				id="published" name="published" value="Yes" 
-				<?php echo ('Yes' == $this->sanitized->published->value) ? 'checked="checked"' : ''; ?> /><label for="published" class="inptlabl fl"><?php echo $this->__ ( 'Locale_Published' ); ?></label><br />
-			<div class="validat" style="<?php print $this->sanitized->published->errorMessageStyle; ?>">
-		<?php print $this->sanitized->published->errorMessage; ?></div>
-			</li>
-			<li class="cleaner"><input type="checkbox" id="approved"
-				class="intchk fl" name="approved" value="Yes" 
-				<?php echo ('Yes' == $this->sanitized->approved->value) ? 'checked="checked"' : ''; ?> /> <label for="approved" class="inptlabl fl"><?php echo $this->__ ( 'Locale_Approved' ); ?></label><br />
-			<div class="validat" style="<?php print $this->sanitized->approved->errorMessageStyle; ?>">
-		<?php print $this->sanitized->approved->errorMessage; ?></div>
-			</li>
-		</ul>
-		</td>
-	</tr>
-	<?php if (!empty($this->afterIdList)) {?>
-	<tr>
-		<td class="lable jstalgntop"><?php echo $this->__ ( 'Locale_Order' ); ?>:</td>
-		<td class="lablvalue jstalgntop">
-		<ul class="lstsopt">
-			<li class="cleaner"><input type="radio" id="order"
-				class="intchk fl" name="order" value="0"
-				<?php if (0 == $this->sanitized->order->value || 'after' != $this->sanitized->order->value ) {
-				echo 'checked="checked"';	
-				} ?> /> <label for="order" class="inptlabl fl"><?php echo $this->__ ( 'Locale_At the beginning of the list' ); ?></label><br />
-			<div class="validat" style="<?php print $this->sanitized->order->errorMessageStyle; ?>">
-		<?php print $this->sanitized->order->errorMessage; ?></div>
-			</li>
-			<li class="cleaner">
-				<input type="radio" id="order" class="intchk fl" name="order" value="-1"
-				<?php echo (-1 == $this->sanitized->order->value) ? 'checked="checked"' : ''; ?> /> 
-				<label for="order" class="inptlabl fl"><?php echo $this->__ ( 'Locale_After' ); ?></label><br />
-				<select class="inptslct" id="afterId" name="afterId">
-				<?php echo $this->afterIdList; ?>
-				</select>
-			<div class="validat" style="<?php print $this->sanitized->afterId->errorMessageStyle; ?>">
-		<?php print $this->sanitized->afterId->errorMessage; ?></div>
-			</li>
-		</ul>
-		</td>
-	</tr>
-	<?php } else { ?>
-	<tr>
-		<td><input type="hidden" name="order" value="0" /></td>
-	</tr>
-	<?php }?>
-</table>
+	<div class="entrdcont">
+		<div class="wdthauto">
+			<?php 
+			 echo $this->form;
+			 echo $this->dojo ();
+			?>
+		</div>
+	</div>
+</div>
 
-</div>
-</div>
-</div>
-<!--end entrdata--></div>
-<!--end conttab1--> <!--conttab2-->
-<div class="mytabscont" id="conttab2" style="display: none">
-<div class="entrdata">
-<h2 class="datatitle"><?php echo $this->__ ( 'Locale_Advanced Settings' ); ?></h2>
-<div class="entrdcont">
-<div class="wdthauto">
-<table class="formlist">
-	<tr>
-		<td class="lable jstalgntop"><?php echo $this->__ ( 'Locale_Comments' ); ?>:</td>
-		<td class="lablvalue jstalgntop"><input type="text" class="inptflx"
-			id="comment" name="comment"
-			value="<?php print $this->sanitized->comment->value; ?>" />
-		<div class="validat" style="<?php print $this->sanitized->comment->errorMessageStyle; ?>">
-		<?php print $this->sanitized->comment->errorMessage; ?></div>
-		</td>
-	</tr>
-</table>
-</div>
-</div>
-</div>
-<!--end entrdata-->
-</div>
-<!--end conttab2-->
-</div>
-<!--end ritcont-->
-</form>
+
 </div>
 <!--end maincont-->
 </div>
