Push all modification with 2 version for DB with/without data

--- a/app/theme/backend/default/template/html/menu.phtml
+++ b/app/theme/backend/default/template/html/menu.phtml
@@ -158,6 +158,22 @@
 			</li>
 		</ul>
 	</li>
+	<li><a href="#">الوسيط</a>
+		<ul>
+			<li><a href="#">إضافة وسط</a></li>
+			<li><a href="#">عرض الأوساط</a></li>
+			<li class="last"><a href="#" class="hassub">عرض القوائم الفرعية</a>
+				<ul>
+					<li class="last"><a href="/admin/handle/pkg/waseet-category/action/list">تصنيف</a></li>
+				</ul>
+			</li>
+			<li class="last"><a href="#" class="hassub">إضافة إلى القوائم الفرعية</a>
+				<ul>
+					<li class="last"><a href="/admin/handle/pkg/waseet-category/action/add">تصنيف</a></li>
+				</ul>
+			</li>
+		</ul>
+	</li>
 	<li><a href="/admin/handle/pkg/banner/action/add">الإعلانات</a>
 		<ul>
 			<li><a href="/admin/handle/pkg/banner/action/add">إضافة إعلان</a></li>
