upload all modified

--- a/app/theme/backend/default/template/object/listPhotoObject.phtml
+++ b/app/theme/backend/default/template/object/listPhotoObject.phtml
@@ -45,8 +45,7 @@
 <table class="srch-rsult">
 	<tr class="heading">
 		<th class="jstalgntop col1"><input type="checkbox" name="selectAll" id="selectAll" /></th>
-		<th class="jstalgntop col1"><a
-			href="#"><span ><?php echo $this->__ ( 'Object_Photo' ); ?></span></a></th>
+		<th class="jstalgntop col1"><span><?php echo $this->__ ( 'Object_Photo' ); ?></span></th>
 		<th class="jstalgntop col1"><a
 			href="<?php echo $this->sort->alias->href; ?>"
 			class="<?php echo $this->sort->alias->cssClass; ?>"><span
