push modified codes

--- a/app/theme/backend/default/template/html/meta.phtml
+++ b/app/theme/backend/default/template/html/meta.phtml
@@ -2,6 +2,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
 <title>Cotrol panel</title>
 <link href="<?php print $this -> defaultSkinCssUrl;?>admin.css" rel="stylesheet" type="text/css" />
+<link href="<?php print $this -> defaultSkinCssUrl;?>jquery-ui.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="<?php print $this -> defaultSkinJsUrl;?>jquery.js"></script>
 <script type="text/javascript" src="<?php print $this -> defaultSkinJsUrl;?>superfish.js"></script>
 <script type="text/javascript" src="<?php print $this -> defaultSkinJsUrl;?>jquery.datepicker.js"></script>
