Upload Object Adding

--- a/app/theme/backend/default/template/html/menu.phtml
+++ b/app/theme/backend/default/template/html/menu.phtml
@@ -38,6 +38,7 @@
 				<li><a href="/admin/handle/pkg/object-static/action/add">إضافة صفحة للموقع</a></li>
 				<li><a href="/admin/handle/pkg/object-directory/action/add">إنشاء مجلد</a></li>
 				<li><a href="/admin/handle/pkg/object-file/action/add">تحميل ملف</a></li>
+				<li><a href="/admin/handle/pkg/object-source/action/add">إضافة مصدر</a></li>
 				<li class="last"><a href="/admin/handle/pkg/object-url/action/add">إضافة رابط</a></li>
 		</ul>
 		</li>
@@ -49,13 +50,12 @@
 				<li><a href="/admin/handle/pkg/object-static/action/list">عرض صفحات الموقع</a></li>
 				<li><a href="/admin/handle/pkg/object-directory/action/list">عرض المجلدات</a></li>
 				<li><a href="/admin/handle/pkg/object-file/action/list">عرض الملفات</a></li>
+				<li><a href="/admin/handle/pkg/object-source/action/list">عرض المصادر</a></li>
 				<li class="last"><a href="/admin/handle/pkg/object-url/action/list">عرض الروابط</a></li>
 			</ul>
 		</li>
 		<li><a href="/admin/handle/pkg/feature/action/list">عرض مقالات مهمة</a></li>
-		<li><a href="/admin/handle/pkg/object-comment/action/list">عرض التعليقات</a></li>
-		<li><a href="/admin/handle/pkg/object-source/action/add">إضافة مصدر</a></li>
-		<li class="last"><a href="/admin/handle/pkg/object-source/action/list">عرض المصادر</a></li>
+		<li class="last"><a href="/admin/handle/pkg/object-comment/action/list">عرض التعليقات</a></li>
 	</ul>
 	</li>
 	<li><a href="/admin/handle/pkg/poll/action/add">الاستطلاعات</a>
