--- a/app/theme/frontend/default/template/index.phtml
+++ b/app/theme/frontend/default/template/index.phtml
@@ -9,7 +9,7 @@
 
 <script type="text/javascript">
 $(document).ready(function() {
-    $('#carouselh').jsCarousel({ 
+    $('#carouselh').jsCarousel({
     	onthumbnailclick: function(src) { 
     		return true;
     		}, 
@@ -20,6 +20,7 @@ $(document).ready(function() {
     		$(".news div").css("visibility", "hidden");
     		
     		var currentItem = thistag.parent().attr('id');
+    		alert(currentItem);
     		$("#pic-"+ currentItem).css("visibility", "visible");
     		$("#news-"+currentItem).css("visibility", "visible");
 
@@ -33,16 +34,12 @@ $(document).ready(function() {
     		}, 
     	autoscroll: false, 
     	circular: true, 
-    	masked: true, 
+    	masked: false, 
     	itemstodisplay: 6, 
     	orientation: 'h' 
     	});
 });       
 </script>
-<style>
-	.select{ background: url("fselected.png") no-repeat scroll 35px 0 transparent}
-	
-</style>
 </head>
 
 <body>
@@ -70,7 +67,7 @@ $(document).ready(function() {
       	<div class="fNews">
         	<h3>Today news</h3>
             <div class="newsCon">
-					<div class="pic">
+					<div class="pic"> 
 						<img id="pic-1" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" width="280" height="170" alt="" />
 						<img id="pic-2" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" style="display: none; visibility: hidden" width="280" height="170" alt="" />
 						<img id="pic-3" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" style="display: none; visibility: hidden" width="280" height="170" alt="" />
@@ -79,6 +76,10 @@ $(document).ready(function() {
 						<img id="pic-6" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" style="display: none; visibility: hidden" width="280" height="170" alt="" />
 						<img id="pic-7" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" style="display: none; visibility: hidden" width="280" height="170" alt="" />
 						<img id="pic-8" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" style="display: none; visibility: hidden" width="280" height="170" alt="" />
+						<img id="pic-9" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" style="display: none; visibility: hidden" width="280" height="170" alt="" />
+						<img id="pic-10" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" style="display: none; visibility: hidden" width="280" height="170" alt="" />
+						<img id="pic-11" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" style="display: none; visibility: hidden" width="280" height="170" alt="" />
+						<img id="pic-12" src="<?php echo $this->defaultSkinImagesUrl?>sample_pic.png" style="display: none; visibility: hidden" width="280" height="170" alt="" />
 						</div>
 	           		<div class="news">
 	               	  <div id="news-1">
@@ -120,6 +121,26 @@ $(document).ready(function() {
 	               	  	<h2><a href="<?php echo $this->rootUrl?>news">888 Ferrari 2012 now in Qatar</a></h2>
 	                  	<p>Enzo Ferrari never intended to produce road cars when he formed Scuderia Ferrari (literally "Ferrari Stable", and usually used to mean "Team Ferrari", it is correctly pronounced [skudeˈriːa]) in 1928 as a sponsor for amateur drivers headquartered in Modena. Ferrari prepared, and successfully raced, various drivers in Alfa Romeo cars until 1938, when he was hired by Alfa Romeo to head their motor racing department... <a class="more" href="<?php echo $this->rootUrl?>news">read more &raquo;</a></p>
 	                  </div>
+	                  
+	                  <div id="news-9" style="display: none; visibility: hidden">
+	               	  	<h2><a href="<?php echo $this->rootUrl?>news">999 Ferrari 2012 now in Qatar</a></h2>
+	                  	<p>Enzo Ferrari never intended to produce road cars when he formed Scuderia Ferrari (literally "Ferrari Stable", and usually used to mean "Team Ferrari", it is correctly pronounced [skudeˈriːa]) in 1928 as a sponsor for amateur drivers headquartered in Modena. Ferrari prepared, and successfully raced, various drivers in Alfa Romeo cars until 1938, when he was hired by Alfa Romeo to head their motor racing department... <a class="more" href="<?php echo $this->rootUrl?>news">read more &raquo;</a></p>
+	                  </div>
+	                  
+					  <div id="news-10" style="display: none; visibility: hidden">
+	               	  	<h2><a href="<?php echo $this->rootUrl?>news">10 Ferrari 2012 now in Qatar</a></h2>
+	                  	<p>Enzo Ferrari never intended to produce road cars when he formed Scuderia Ferrari (literally "Ferrari Stable", and usually used to mean "Team Ferrari", it is correctly pronounced [skudeˈriːa]) in 1928 as a sponsor for amateur drivers headquartered in Modena. Ferrari prepared, and successfully raced, various drivers in Alfa Romeo cars until 1938, when he was hired by Alfa Romeo to head their motor racing department... <a class="more" href="<?php echo $this->rootUrl?>news">read more &raquo;</a></p>
+	                  </div>
+	                  
+	                  <div id="news-11" style="display: none; visibility: hidden">
+	               	  	<h2><a href="<?php echo $this->rootUrl?>news">11 Ferrari 2012 now in Qatar</a></h2>
+	                  	<p>Enzo Ferrari never intended to produce road cars when he formed Scuderia Ferrari (literally "Ferrari Stable", and usually used to mean "Team Ferrari", it is correctly pronounced [skudeˈriːa]) in 1928 as a sponsor for amateur drivers headquartered in Modena. Ferrari prepared, and successfully raced, various drivers in Alfa Romeo cars until 1938, when he was hired by Alfa Romeo to head their motor racing department... <a class="more" href="<?php echo $this->rootUrl?>news">read more &raquo;</a></p>
+	                  </div>
+	                  
+	                  <div id="news-12" style="display: none; visibility: hidden">
+	               	  	<h2><a href="<?php echo $this->rootUrl?>news">12 Ferrari 2012 now in Qatar</a></h2>
+	                  	<p>Enzo Ferrari never intended to produce road cars when he formed Scuderia Ferrari (literally "Ferrari Stable", and usually used to mean "Team Ferrari", it is correctly pronounced [skudeˈriːa]) in 1928 as a sponsor for amateur drivers headquartered in Modena. Ferrari prepared, and successfully raced, various drivers in Alfa Romeo cars until 1938, when he was hired by Alfa Romeo to head their motor racing department... <a class="more" href="<?php echo $this->rootUrl?>news">read more &raquo;</a></p>
+	                  </div>
 	              	</div>
 	               	<div class="cls"></div>
             </div>
@@ -134,6 +155,10 @@ $(document).ready(function() {
                     <div id="6"><img src="<?php echo $this->defaultSkinImagesUrl ?>sample_cr.png" width="95" height="54" alt="" /><span class="thumbnail-text"></span></div>
                     <div id="7"><img src="<?php echo $this->defaultSkinImagesUrl ?>sample_cr.png" width="95" height="54" alt="" /><span class="thumbnail-text"></span></div>
                     <div id="8"><img src="<?php echo $this->defaultSkinImagesUrl ?>sample_cr.png" width="95" height="54" alt="" /><span class="thumbnail-text"></span></div>
+                    <div id="9"><img src="<?php echo $this->defaultSkinImagesUrl ?>sample_cr.png" width="95" height="54" alt="" /><span class="thumbnail-text"></span></div>
+                    <div id="10"><img src="<?php echo $this->defaultSkinImagesUrl ?>sample_cr.png" width="95" height="54" alt="" /><span class="thumbnail-text"></span></div>
+                    <div id="11"><img src="<?php echo $this->defaultSkinImagesUrl ?>sample_cr.png" width="95" height="54" alt="" /><span class="thumbnail-text"></span></div>
+                    <div id="12"><img src="<?php echo $this->defaultSkinImagesUrl ?>sample_cr.png" width="95" height="54" alt="" /><span class="thumbnail-text"></span></div>
                 </div>
 <!--                 <div class="arr"></div> -->
                 <div class="cls"></div>
